# google-search-console-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.it.md  README.md  SECURITY.md  audit.py  branding.json  get_refresh_token.py  glama.json  pyproject.toml  server.json  server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
credentials/: google_ads.example.json  oauth_credentials.example.json
src/google_search_console_mcp/: __init__.py  __main__.py  audit.py  auth.py  config.py  server.py
src/google_search_console_mcp/templates/: report.html.j2
