[project]
name = "google-search-console-mcp"
version = "1.0.0"
description = "MCP server for Google Search Console"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
google-search-console-mcp = "server:mcp.run"
