[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-google-search-console"
version = "2.0.1"
description = "MCP server for Google Search Console: query performance data, inspect URLs, check indexing, and generate HTML SEO audit reports from Claude, Cursor, Zed, and any Model Context Protocol client."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Andrea Camolese" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "google-search-console",
    "gsc",
    "search-console-api",
    "webmaster-tools",
    "seo",
    "seo-audit",
    "seo-tools",
    "seo-automation",
    "seo-reports",
    "claude",
    "claude-code",
    "claude-desktop",
    "cursor",
    "zed",
    "anthropic",
    "llm-tools",
    "ai-tools",
    "report-generator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/acamolese/google-search-console-mcp"
Repository = "https://github.com/acamolese/google-search-console-mcp"
Issues = "https://github.com/acamolese/google-search-console-mcp/issues"
Documentation = "https://github.com/acamolese/google-search-console-mcp#readme"
"Release notes" = "https://github.com/acamolese/google-search-console-mcp/releases"
PyPI = "https://pypi.org/project/mcp-google-search-console/"

[project.scripts]
mcp-google-search-console = "google_search_console_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_search_console_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/google_search_console_mcp/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
